# reeln-core

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SECURITY.md
.githooks/: pre-commit
.github/: manylinux.Dockerfile
.github/workflows/: ci.yml  container.yml  release.yml
crates/reeln-config/: Cargo.toml
crates/reeln-config/src/: error.rs  init.rs  lib.rs  loader.rs  model.rs  paths.rs
crates/reeln-ffi/: Cargo.toml  build.rs  cbindgen.toml
crates/reeln-ffi/include/: reeln.h
crates/reeln-ffi/src/: lib.rs
crates/reeln-media/: Cargo.toml
crates/reeln-media/src/: codec.rs  composite.rs  concat.rs  error.rs  extract.rs  filter.rs  lib.rs  probe.rs  render.rs  xfade.rs
crates/reeln-overlay/: Cargo.toml
crates/reeln-overlay/src/: animation.rs  elements.rs  error.rs  layout.rs  lib.rs  render.rs  template.rs  text.rs
crates/reeln-plugin/: Cargo.toml
crates/reeln-plugin/src/: capabilities.rs  hooks.rs  lib.rs  loader.rs  registry.rs
crates/reeln-python/: Cargo.toml  pyproject.toml
crates/reeln-python/src/: lib.rs
crates/reeln-sport/: Cargo.toml
crates/reeln-sport/src/: error.rs  lib.rs  registry.rs  segment.rs
crates/reeln-state/: Cargo.toml
crates/reeln-state/src/: directory.rs  error.rs  game.rs  lib.rs  mutations.rs  persist.rs  replay.rs
