[package]
name = "reeln-config"
description = "Configuration system — XDG paths, layered merge, env overrides, validation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
thiserror.workspace = true
log.workspace = true
reeln-sport.workspace = true

[dev-dependencies]
tempfile.workspace = true
serial_test = "3"
