[package]
name = "reeln-ffi"
description = "C ABI for OBS plugin and other native consumers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
reeln-media.workspace = true
reeln-overlay.workspace = true
reeln-sport.workspace = true
reeln-state.workspace = true
reeln-config.workspace = true
reeln-plugin.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[build-dependencies]
cbindgen = "0.27"
