[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "reeln-native"
requires-python = ">=3.11"
description = "Rust-powered native backend for the reeln CLI"
license = "AGPL-3.0-only"
readme = "../../README.md"
dynamic = ["version"]

[project.urls]
Homepage = "https://streamn.dad"
Repository = "https://github.com/StreamnDad/reeln-core"

[tool.maturin]
features = ["pyo3/extension-module"]
